--- a/pom.xml
+++ b/pom.xml
@@ -267,7 +267,7 @@
       <dependency>
         <groupId>org.apache.flink</groupId>
         <artifactId>flink-core</artifactId>
-        <version>${flink.version}</version>
+        <version>1.9.1</version>
       </dependency>
       <dependency>
         <groupId>org.apache.flink</groupId>
