--- a/pom.xml
+++ b/pom.xml
@@ -407,7 +407,7 @@
       <dependency>
         <groupId>org.scala-lang</groupId>
         <artifactId>scala-library</artifactId>
-        <version>${scala.version}</version>
+        <version>2.13.1</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
